--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/swc-darwin-arm64": "^15.0.3",
     "@vercel/analytics": "^1.3.1",
     "firebase": "^10.13.2",
     "next": "14.2.13",
